<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015. The BoCool Project.
  ~
  ~            yinglovezhuzhu@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~             http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/main_bg_color">
    <ImageView
        android:id="@+id/iv_error_page_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/app_name"/>
    <TextView
        android:id="@+id/tv_error_page_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/error_page_msg_marginTop"
        android:textSize="@dimen/error_page_msg_textSize"
        android:textColor="@color/text_color_error_page_msg"
        android:text="@string/net_error"/>
    <Button
        android:id="@+id/btn_error_page_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/error_page_reload_marginTop"
        android:layout_marginBottom="@dimen/error_page_reload_marginBottom"
        android:textSize="@dimen/error_page_reload_textSize"
        android:background="@color/transparent"
        android:text="@string/click_to_reload"
        android:textColor="@color/text_color_green"/>
</LinearLayout>