<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015. The BoCool Project.
  ~
  ~            yinglovezhuzhu@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~             http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.xiaoying.bocool.widget.Titlebar
        android:id="@+id/tb_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/about_content_padding">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_about"
            android:contentDescription="@null"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_app_name_paddingTop"
            android:textSize="@dimen/about_app_name_textSize"
            android:textColor="@color/text_color_black"
            android:textStyle="bold"
            android:text="@string/app_name"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/about_happy_word_paddingTop"
            android:textSize="@dimen/about_happy_word_textSize"
            android:textColor="@color/text_color_black"
            android:text="@string/happy_word"/>
        
    </LinearLayout>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/about_content_padding"
        android:paddingStart="@dimen/about_content_padding"
        android:paddingRight="@dimen/about_content_padding"
        android:paddingEnd="@dimen/about_content_padding"
        android:paddingTop="@dimen/about_copyright_paddingVertical"
        android:paddingBottom="@dimen/about_copyright_paddingVertical"
        android:gravity="center"
        android:textSize="@dimen/about_copyright_textSize"
        android:textColor="@color/text_color_dark_gray"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/copyright"/>
</LinearLayout>
