<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015. The BoCool Project.
  ~
  ~          yinglovezhuzhu@gmail.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color_menu"
    android:padding="0dip" >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="@dimen/menu_content_padding"
	        android:gravity="center_vertical">
	        <ImageView 
	            android:id="@+id/iv_menu_avatar"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="centerCrop"
	            android:adjustViewBounds="true"
	            android:src="@drawable/logo_avatar"
	           	android:background="@drawable/bg_menu_avatar"
	           	android:contentDescription="@string/app_name"/>
	        <LinearLayout 
	            android:orientation="vertical"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:paddingLeft="@dimen/menu_content_padding"
	            android:paddingStart="@dimen/menu_content_padding"
	            android:paddingRight="0dip"
	            android:paddingEnd="0dip">
	            <TextView 
	                android:id="@+id/tv_menu_app_name"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/app_name"
	                android:textColor="@color/text_color_white"
	                android:textSize="@dimen/menu_header_title_textSzie"
	                android:textStyle="bold"/>
	            <TextView 
	                android:id="@+id/tv_menu_app_label"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/happy_word"
	                android:textSize="@dimen/menu_header_label_textSzie"
	                android:textColor="@color/text_color_white"
	                android:paddingTop="3dip"/>
	        </LinearLayout>
	    </LinearLayout>
        <ImageView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_divider"
            android:contentDescription="@string/app_name"/>
        <ListView 
            android:id="@+id/lv_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/list_divider"
            android:fadingEdge="@null" />
        
    </LinearLayout>
	<Button 
	    android:id="@+id/btn_menu_exit"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/menu_list_exit_marging"
	    android:gravity="start|center_vertical"
	    android:paddingLeft="@dimen/menu_item_pading_horizontal"
	    android:paddingStart="@dimen/menu_item_pading_horizontal"
	    android:paddingRight="@dimen/menu_item_pading_horizontal"
	    android:paddingEnd="@dimen/menu_item_pading_horizontal"
	    android:paddingTop="@dimen/menu_item_pading_vertical"
	    android:paddingBottom="@dimen/menu_item_pading_vertical"
	    android:drawableLeft="@drawable/ic_menu_exit"
	    android:drawableStart="@drawable/ic_menu_exit"
	    android:drawablePadding="@dimen/menu_item_icon_margin"
	    android:background="@drawable/bg_left_menu_item_selector"
	    android:textSize="@dimen/menu_item_text_size"
	    android:textColor="@color/text_color_white"
	    android:text="@string/exit"/>
</LinearLayout>
